FIX: spacing for champions in overview

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -137,8 +137,9 @@ a:hover{
 }
 
 .OchampsPBImage{
-    width: 100px;
-    margin-right: 5px;
+    width: 115px;
+    margin: 5px;
+    display:inline-block;
 }
 .CProfiles{
     width:200px;
